--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img id="photo" src="Resources/images/profile.png" alt="Profile picture of Sneha Sunil">
         <div id="name">
             <h1>Sneha Sunil</h1>
-            <p>~ Web Develeoper| Cyber Security Enthusiast | Content Writer ~</p>
+            <p>~ Web Developer| Cyber Security Enthusiast | Content Writer ~</p>
         </div>
     </div>
     <div id="links">
