--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="profile">
-        <img id="photo" src="Resources/images/profile.png" alt="Profile picture of Sneha Sunil">
+        <img id="photo" src="Resources/images/profile.jpeg" alt="Profile picture of Sneha Sunil">
         <div id="name">
             <h1>Sneha Sunil</h1>
             <p>~ Web Developer| Cyber Security Enthusiast | Content Writer ~</p>
